allreal backend 체팅 도메인 업데이트 및 버그 수정